--- a/exercises/html-css-1/styles.css
+++ b/exercises/html-css-1/styles.css
@@ -1,7 +1,12 @@
+div {
+    font-family: 'Open Sans', sans-serif;
+}
+
 h1{
     text-align: center;
-    font-size: xx-large;
-    font-style: italic;
+    font-size: 60px;
+    font-family: 'Courgette', cursive;
+    margin: 60px 0 60px 0;
 }
 
 h2 {
@@ -16,6 +21,7 @@ h3{
 
 .flex-container{
     display: flex;  
+    align-items: stretch;
 }
 
 .story {
